# litterbox

./: .editorconfig  .gitignore  .goreleaser.yaml  .litterbox.toml  AGENTS.md  Cargo.toml  IDEAS.md  README.md  ROADMAP.md  deny.toml  justfile
.github/workflows/: docs.build-and-deploy.yaml  litterbox.build-and-release.yaml  litterbox.build-and-test.yaml  merge-to-main.yaml  pull-request.yaml  pull-request.yml  release.yaml  release.yml
.opencode/: opencode.jsonc
.opencode/agent/: litterbox.md
adrs/: README.md
adrs/2026-02-03-mcp-server-sdk/: comparison.md  plan.md  spec.md  tasks.md
adrs/2026-02-03-mcp-server-sdk/poc_implementations/: test_mcp_server.py
adrs/2026-02-03-mcp-server-sdk/poc_implementations/poc-hyper-mcp/: Cargo.toml  IMPLEMENTATION.md
adrs/2026-02-03-mcp-server-sdk/poc_implementations/poc-pmcp/: Cargo.toml  IMPLEMENTATION.md  test_example.rs  test_input.json
adrs/2026-02-03-mcp-server-sdk/poc_implementations/poc-rmcp/: Cargo.toml
adrs/2026-02-03-mcp-server-sdk/poc_implementations/poc-rmcp/src/: main.rs
adrs/2026-02-05-docker-sdk/: comparison.md  plan.md  spec.md  tasks.md
adrs/2026-02-05-docker-sdk/poc-docker-sdk/: Cargo.toml  review-anchor.md  review-docker-wrapper.md  review-rs-docker.md  review.md
adrs/2026-02-05-docker-sdk/poc-docker-sdk/src/: lib.rs
adrs/2026-02-05-docker-sdk/poc-docker-sdk/src/lib/: bollard.rs  docker_wrapper.rs  rs_docker.rs
adrs/2026-02-05-docker-sdk/poc-docker-sdk/tests/: docker_client.rs
adrs/2026-02-05-git-sdk/: evaluation.md  plan.md  spec.md  tasks.md
adrs/2026-02-05-git-sdk/poc-git-sdk/: Cargo.toml
adrs/2026-02-05-sandboxes/: plan.md  spec.md  tasks.md
adrs/2026-02-07-mcp-tools/: plan.md  spec.md  tasks.md
adrs/2026-02-07-project-config/: plan.md  spec.md  tasks.md
adrs/2026-02-09-port-forwarding/: plan.md  spec.md  tasks.md
docs/: .gitignore  .yarnrc.yml  docusaurus.config.ts  package.json  sample.envrc  sidebars.ts  tsconfig.json
docs/docs/: first-sandbox.mdx  install.mdx  intro.mdx  project-setup.mdx
docs/docs/agents/: _category_.json  amazon-kiro.mdx  claude-code.mdx  opencode.mdx  zed-agent.mdx
docs/docs/reference/: _category_.json  cli.mdx  config.mdx  mcp.mdx
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
docs/src/theme/: MDXComponents.tsx
docs/src/webpack-shims/: vscode-jsonrpc-cancellation.js  vscode-jsonrpc-events.js
nix/: flake.nix
poc_implementations/: .gitignore  README.md  test_mcp_server.py  test_mcp_server.sh
poc_implementations/poc-hyper-mcp/: config.json  mcp-config.json
poc_implementations/poc-pmcp/src/: main.rs
poc_implementations/poc-prism-mcp/: Cargo.toml  IMPLEMENTATION.md
poc_implementations/poc-prism-mcp/src/: main.rs
poc_implementations/poc-rmcp/: IMPLEMENTATION.md
poc_implementations/poc-ultrafast-mcp/: Cargo.toml
poc_implementations/poc-ultrafast-mcp/src/: main.rs
src/: config.rs  config_loader.rs  lib.rs  main.rs  mcp.rs  test.py
src/compute/: mod.rs
src/domain/: mod.rs
src/sandbox/: mod.rs
src/scm/: mod.rs
(+12 files in other folders)
