[package]
name = "poc-ultrafast-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
ultrafast-mcp = { path = "/Users/lukecarrier/Code/techgopal/ultrafast-mcp/crates/ultrafast-mcp", features = ["minimal"] }
