[package]
name = "bollard_poc"
version = "0.1.0"
edition = "2021"

[dependencies]
bollard = "0.20.1"
tokio = { version = "1", features = ["full"] }
tar = "0.4"
futures = "0.3"
bytes = "1"
async-trait = "0.1.89"
rs-docker = "0.0.60"
hyper = "0.14"
hyperlocal = "0.8"
serde_json = "1.0.149"
urlencoding = "2.1.3"
